# abhinavse

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  rxconfig.py
.github/workflows/: deploy.yml
app/: app.py
services/backend/: Dockerfile  main.py
services/frontend/: Dockerfile  main.py
services/frontend/templates/: about.html  base.html  index.html
templates/: base.html  index.html
