[project]
name = "abhinavse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.3",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
    "httpx>=0.27.0",  # Add this line
]
